@@ -1,3 +1,11 @@
+2004-03-18  James Henstridge  <james@daa.com.au>
+
+	* jhbuild/commands/tinderbox.py (do_tinderbox): raise a UsageError
+	if no output directory specified (related to bug 136638).
+
+	* jhbuild/frontends/tinderbox.py (TinderboxBuildScript.end_build):
+	fix printing of error values.
+
 2004-03-18  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* modulesets/gnome24.modules:
